--- a/demo111/res.qrc
+++ b/demo111/res.qrc
@@ -10,6 +10,7 @@
         <file>res/loop.png</file>
         <file>res/next.png</file>
         <file>res/pause.png</file>
+        <file>res/play.png</file>
         <file>res/previous.png</file>
         <file>res/pure.png</file>
         <file>res/random.png</file>
