--- a/demo111/res.qrc
+++ b/demo111/res.qrc
@@ -18,5 +18,7 @@
         <file>res/silence.png</file>
         <file>res/single.png</file>
         <file>res/sound.png</file>
+        <file>res/bcakground.jpg</file>
+        <file>res/theme.png</file>
     </qresource>
 </RCC>
