--- a/demo111/mainwindow.ui
+++ b/demo111/mainwindow.ui
@@ -94,7 +94,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>00:00</string>
     </property>
    </widget>
    <widget class="QLabel" name="currentTimeLabel">
@@ -107,7 +107,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>00:00</string>
     </property>
    </widget>
    <widget class="QPushButton" name="themeBtn">
@@ -124,25 +124,6 @@
     </property>
    </widget>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>540</width>
-     <height>17</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
