--- a/demo111/mainwindow.ui
+++ b/demo111/mainwindow.ui
@@ -46,7 +46,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="listBtn">
+      <widget class="QPushButton" name="addBtn">
        <property name="text">
         <string/>
        </property>
@@ -121,6 +121,19 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QToolButton" name="soundBtn">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>180</y>
+      <width>32</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
     </property>
    </widget>
   </widget>
