--- a/demo111/res.qrc
+++ b/demo111/res.qrc
@@ -20,5 +20,7 @@
         <file>res/sound.png</file>
         <file>res/bcakground.jpg</file>
         <file>res/theme.png</file>
+        <file>res/collapse.png</file>
+        <file>res/expand.png</file>
     </qresource>
 </RCC>
