更改背景和按键

--- a/demo111/res.qrc
+++ b/demo111/res.qrc
@@ -20,5 +20,6 @@
         <file>res/sound.png</file>
         <file>res/bcakground.jpg</file>
         <file>res/theme.png</file>
+        <file>res/playlist.png</file>
     </qresource>
 </RCC>
