--- a/demo111/res.qrc
+++ b/demo111/res.qrc
@@ -1,25 +1,1 @@
-<RCC>
-    <qresource prefix="/">
-        <file>res/add_to.png</file>
-        <file>res/clear.png</file>
-        <file>res/delete.png</file>
-        <file>res/download.png</file>
-        <file>res/exit.png</file>
-        <file>res/like.png</file>
-        <file>res/list.png</file>
-        <file>res/loop.png</file>
-        <file>res/next.png</file>
-        <file>res/pause.png</file>
-        <file>res/play.png</file>
-        <file>res/previous.png</file>
-        <file>res/pure.png</file>
-        <file>res/random.png</file>
-        <file>res/set.png</file>
-        <file>res/silence.png</file>
-        <file>res/single.png</file>
-        <file>res/sound.png</file>
-        <file>res/bcakground.jpg</file>
-        <file>res/theme.png</file>
-        <file>res/playlist.png</file>
-    </qresource>
-</RCC>
+<RCC/>
