--- a/demo111/QTMusicPlayer/res.qrc
+++ b/demo111/QTMusicPlayer/res.qrc
@@ -48,5 +48,7 @@
         <file>sound_day.png</file>
         <file>playerlist.png</file>
         <file>add_day.png</file>
+        <file>background_day.png</file>
+        <file>20250723_1255_Dawn Over Mountain Lake_simple_compose_01k0tt4aarfx8asm406np9wmap.png</file>
     </qresource>
 </RCC>
